<resources>
    <string name="app_name">Vivi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_profile">Profile</string>
    <string name="db_rac_users">users</string>
    <string name="db_rac_events">events</string>
    <string name="err_gen">Errore generico</string>
    <string name="err_no_all_data">Inserisci tutti i dati richiesti</string>
    <string name="reg_succ">Registrazione avvenuta con successo, clicca qui per tornare alla pagina di login</string>
    <string name="reg_rej">Errore durante la registrazione</string>
    <string name="reg_err_email">Email formattata in modo errato</string>
    <string name="reg_err_psw">Password inserita troppo corta, almeno 6 caratteri</string>
    <string name="reg_err_exist">Utente già esistente</string>
    <string name="log_succ">Login avvenuto con successo</string>
    <string name="log_rej">Password e/o email sono state inserite errate</string>
    <string name="log_err_no_all_data">Inserisci tutti i dati richiesti</string>
    <string name="new_ev_pub">Evento: publico</string>
    <string name="new_ev_priv">Evento: privato</string>
    <string name="ut_err_after_now">beforeNow</string>
    <string name="ut_err_before_now">afterNow</string>
    <string name="ut_err_no_data">noData</string>
    <string name="ut_err_no_data_out">Data formattata in modo errato</string>
    <string name="ut_err_after_now_out">Data inserita successiva a quella odierna</string>
    <string name="ut_err_before_now_out">Data inserita precedente a quella odierna</string>
    <string name="event_send_ev">Evento</string>
    <string name="event_macro_send_type">EventoType</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_event_isc">Iscriviti</string>
    <string name="page_event_dis">Disiscriviti</string>
    <string name="allert_title_new_event">Creazione evento</string>
    <string name="allert_text_new_event">Evento è stato creato con successo</string>
    <string name="allert_title_del_event">Eliminazione evento</string>
    <string name="allert_text_del_event">Evento è stato cancellato con successo</string>
    <string name="allert_title_show_event_err">Errore Evento</string>
    <string name="allert_text_show_event_err">La pagina non e stata caricata correttamente, l\'evento potrebbe essere stato cancellato o ci potrebbero essere altri problemi ricarcia la pagina</string>
    <string name="palla_prig_desc">Il gioco si svolge a squadre. Esse devono essere composte da un minimo di
        cinque giocatori fino ad un massimo di venti. Per giocare a palla prigioniera è necessaria una palla e
        un campo da gioco diviso in due, sia esso posto all\'aperto o in una palestra, di misura rettangolare grande
        pressappoco 15x8 metri. Il campo dovrà essere delimitato sul fondo da una striscia orizzontale che delimiterà
        l\'aerea dove si collocheranno i prigionieri catturati durante il gioco. Le due squadre prenderanno posto sulle
        due parti del campo. A questo punto il gioco può cominciare. Colui che è in possesso della palla dovrà cercare
        di colpire gli avversari nell\'altro campo tramite il lancio della palla. Se la palla prima di colpire l\'avversario
        tocca terra o viene deviata la presa non è valida, al contrario se il giocatore viene colpito direttamente dovrà correre
        nell\'area dei prigionieri posta sul fondo del campo degli avversari. Li dovrà aspettare che qualche suo compagno intercetti
        un tiro fermando la palla al volo liberandolo così dalla sua prigionia. Vince il gioco chi riesce a colpire tutti gli avversari."</string>
    <string name="flipper_desc">Flipper è un gioco di abilità e di movimento, per poter giocare serve una palla. Stando in piedi, i giocatori si
        dispongono in cerchio a gambe divaricate, mettendosi piede contro piede. Chi ha la palla deve cercare di farla passare tra le gambe di un
        altro giocatore, colpendola con le mani unite. Se un giocatore non riesce a parare il tiro e subisce un gol, deve portare una mano dietro
        la schiena; al gol successivo dovrà girarsi di spalle e potrà parare con due mani; se ne subisce un altro potrà usare solo una mano; se incassa
        il quarto gol sarà eliminato. Quando rimarranno gli ultimi due giocatori si dovranno battere dei \'rigori\' secondo modalità e distanze concordate
        dai giocatori. Vince l\'ultimo giocatore che rimane in gioco.</string>
    <string name="mosca_cieca_desc">Mosca Cieca: per questa attività è necessaria una benda. Tra i partecipanti viene scelta una \'Mosca\'. Il giocatore mosca
        viene bendato e fatto girare su sè stesso diverse volte per disorientarlo e al via deve riuscire a toccare gli altri, che possono muoversi liberamente
        intorno senza allontanarsi troppo dal posto originario. Appena la mosca tocca un giocatore, questo prende il suo posto. Alternativa divertente: quando
        la mosca tocca un giocatore deve anche indovinare chi è quel giocatore. Se sbaglia il gioco ricomincia e il giocatore mosca bendato rimane sempre lo
        stesso. Tips: un gioco molto simile a mosca cieca è \'Marco Polo\'. Le regole sono le stesse tuttavia quì, se il giocatore bendato si trova in difficoltà,
        può chiamare: \'Marco\' e tutti gli altri giocatori devono rispondergli: \'Polo\'. Questa variante può essere applicata anche a Mosca Cieca per aiutare
        la mosca bendata che non riesce a toccare nessuno.</string>
    <string name="nascondino_desc">"Nascondino è forse il più famoso gioco di movimento di gruppo da svolgere all\'aperto. Il gioco deve essere svolto in uno spazio
        ampio e aperto che offra la possibilità di nascondersi ovvero presenti alberi, cespugli, strutture dietro a cui rifugiarsi. Viene scelto chi sarà il primo
        giocatore a \'stare sotto\'. Il giocatore che sta sotto dovrà tenere la testa contro un muro od un albero che chiameremo \'Tana\'. Inizia il gioco: chi
        \'sta sotto\' inizia a contare fino a 60 con gli occhi chiusi, nel frattempo tutti gli altri giocatori si nascondono. Terminata la conta, il giocatore che
        sta sotto urla: \'Via\', si gira e va a cercare gli altri. Quando trova un giocatore corre alla tana e urla il nome del giocatore, quel giocatore viene eliminato.
        Il primo giocatore eliminato sarà colui che farà la conta al prossimo turno. Se un giocatore raggiunge la tana prima di essere trovato ed dichiara \'tana\' allora
        è salvo. L\'ultimo giocatore rimasto in gioco può dichiarare \'tana libera tutti\' liberando così tutti i giocatori precedentemente scoperti ed eliminati.
        Alternativa divertente: nel momento in cui chi sta sotto trova un giocatore nascosto deve cercare di toccarlo. Se riesce a toccarlo prima che quel giocatore faccia
        tana e si salvi allora, il giocatore toccato, non verrà eliminato ma dovrà invece cercare anche lui gli altri giocatori ed aiutare chi \'sta sotto\'."</string>
    <string name="sardine_desc">\'Sardine\' è un nascondino al contrario. Solo un giocatore si nasconde e tutti gli altri, dopo aver contato fino a 60, gli danno la caccia
        individualmente. Quando un cacciatore trova il nascondiglio si unisce alle prede fino a quando non stanno tutti nascosti e stretti come sardine! Il gioco continua
        fino a quando l\'ultimo cacciatore trova le sardine. In questo gioco vincono tutti tranne l\'ultimo cacciatore. Egli diventerà colui che si nasconderà per primo nel
        prossimo turno di gioco."</string>
    <string name="uno_due_tre_stella_desc">1,2,3…STELLA! Per questo gioco molto famoso (il cui nome cambia in base alla regione in cui si gioca) non servono strumenti
        particolari, solo… cercate di stare fermi! PREPARATIVI: Deve essere scelto un \'capogioco\' tra i giocatori. Il capogioco dovrà appoggiare la testa ad un albero
        od un muro coprendosi gli occhi. Gli altri partecipanti dovranno posizionarsi tutti dietro una linea orizzontale a 25-35 metri di distanza, alle spalle del capogioco.
        REGOLE: Il capogioco (con gli occhi chiusi e girato verso il muro) pronuncerà ad alta voce: \'Uno, Due, Tre… Stella!\'. Non appena avrà detto \'stella\' potrà
        girarsi ed osservare attentamente gli altri giocatori. Se il capogioco, mentre si sta girando o mentre è girato a guardarli, vede qualche giocatore muoversi allora
        quei giocatori vengono eliminati. OBBIETTIVO: Vince il giocatore (o i giocatori) che per primi riescono ad arrivare a toccare il muro e dire: \'STELLONE!\', prima
        di essere eliminati.</string>
</resources>